finish styling background img

--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="index.html" class="navbar-brand"><img src="assets/images/logo.png" alt="logo"
-                                                           style="background-color: red;"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/images/logo.png" alt="logo"></a>
         </div>
         <div class="navbar-collapse collapse" aria-expanded="false">
             <nav>
@@ -59,19 +58,19 @@
 <!--End Navbar section-->
 
 <!-- Background-image section-->
-<section>
+<section class="main-section">
     <div class="container">
         <div class="col-md-8 col-md-offset-2">
             <div class="hero-text">
-                <h1>Your choice is our choice</h1>
-            </div>
-            <div class="medium-text">
+                <h2>Your choice is our choice</h2>
+
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elitsed eiusmod tempor enim minim veniam
                     quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
-            </div>
-            <div class="main-buttons">
-                <button class="btn btn-default">About Us</button>
-                <button class="btn btn-default">Get Start</button>
+
+                <div class="main-buttons">
+                    <button class="btn btn-default about-btn">About Us</button>
+                    <button class="btn btn-default start-btn">Get Start</button>
+                </div>
             </div>
         </div>
     </div>
