--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--Fonts Awesome-->
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link href="../bower_components/font-awesome/css/font-awesome.css">
+    <!--Owl Carousel-->
+    <link href="../bower_components/owl.carousel/dist/assets/owl.carousel.css">
+    <link href="../bower_components/owl.carousel/dist/assets/owl.theme.default.css">
 </head>
 <body>
 
@@ -60,7 +63,7 @@
 <!-- Background-image section-->
 <section class="main-section">
     <div class="container">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-1">
             <div class="hero-text">
                 <h2>Your choice is our choice</h2>
 
@@ -77,7 +80,171 @@
 </section>
 <!-- End Background-image section-->
 
+<!-- About us section-->
+<section class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="text-center section-title">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitsed eiusmod tempor enim minim veniam
+                    quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
+            </div>
+
+            <div class="col-md-5">
+                <div class="promotion-title">
+                    <h2>Clean - Simple - Modern Beautiful template.</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                        has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                        took a galley of type and scrambled it to make a type specimen book. It has survived not
+                        only five centuries, but also the leap into electronic typesetting, remaining essentially
+                        unchanged.</p>
+                </div>
+                <a class=" btn-light-bg">Read More</a>
+            </div>
+            <div class="col-md-7">
+                <div>
+                    <div class="item"><img src="assets/images/1.jpg"></div>
+                    <!--<div class="item"><img src="assets/images/2.jpg"></div>-->
+                    <!--<div class="item"><img src="assets/images/3.jpg"></div>-->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End About us section-->
+
+<!-- Features section-->
+<section class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="text-center section-title">
+                <h2>Template Features</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitsed eiusmod tempor enim minim
+                    veniam quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
+            </div>
+            <div class="font-icons">
+                <div class="col-md-4 single-features">
+                    <i class="fa fa-battery-full"></i>
+                    <h2>Big Community</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+                <div class="col-md-4 single-features">
+                    <i class="fa fa-battery-full"></i>
+                    <h2>Big Community</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+                <div class="col-md-4 single-features">
+                    <i class="fa fa-battery-full"></i>
+                    <h2>Big Community</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+                <div class="col-md-4 single-features">
+                    <i class="fa fa-battery-full"></i>
+                    <h2>Big Community</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+                <div class="col-md-4 single-features">
+                    <i class="fa fa-battery-full"></i>
+                    <h2>Big Community</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+                <div class="col-md-4 single-features">
+                    <i class="fa fa-battery-full"></i>
+                    <h2>Big Community</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Features section-->
+
+<!-- Bussines plan section-->
+<section class="section-padding" style="background-color: #F9F9F9">
+    <div class="container">
+        <div class="row">
+            <div class="text-center section-title">
+                <h2>Choose your perfect plan</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitsed eiusmod tempor enim minim
+                    veniam quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
+            </div>
+
+            <div class="col-md-3">
+                <div class="single-pricing">
+                    <h4>Personal</h4>
+                    <h1>
+                        <small class="dollar-sign">$</small>
+                        39
+                    </h1>
+                    <ul>
+                        <li>Fully Responsive</li>
+                        <li>Clean and modern</li>
+                        <li>Simple and professional</li>
+                        <li>Easy to use</li>
+                        <li>24/7 support</li>
+                    </ul>
+                    <a class="btn-light-bg"><i class="fa fa-shopping-basket"></i>BUY NOW</a>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="single-pricing">
+                    <h4>Business</h4>
+                    <h1>
+                        <small class="dollar-sign">$</small>
+                        59
+                    </h1>
+                    <ul>
+                        <li>Fully Responsive</li>
+                        <li>Clean and modern</li>
+                        <li>Simple and professional</li>
+                        <li>Easy to use</li>
+                        <li>24/7 support</li>
+                    </ul>
+                    <a class="btn-light-bg"><i class="fa fa-shopping-basket"></i>BUY NOW</a>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="single-pricing">
+                    <h4>Corporate</h4>
+                    <h1>
+                        <small class="dollar-sign">$</small>
+                        79
+                    </h1>
+                    <ul>
+                        <li>Fully Responsive</li>
+                        <li>Clean and modern</li>
+                        <li>Simple and professional</li>
+                        <li>Easy to use</li>
+                        <li>24/7 support</li>
+                    </ul>
+                    <a class="btn-light-bg"><i class="fa fa-shopping-basket"></i>BUY NOW</a>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="single-pricing">
+                    <h4>PROFESSIONAL</h4>
+                    <h1>
+                        <small class="dollar-sign">$</small>
+                        99
+                    </h1>
+                    <ul>
+                        <li>Fully Responsive</li>
+                        <li>Clean and modern</li>
+                        <li>Simple and professional</li>
+                        <li>Easy to use</li>
+                        <li>24/7 support</li>
+                    </ul>
+                    <a class="btn-light-bg"><i class="fa fa-shopping-basket"></i>BUY NOW</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Bussines plan section-->
+
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="javascript/main.js"></script>
 </body>
 </html>
