--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,10 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <!--Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--Fonts Awesome-->
-    <link href="../bower_components/font-awesome/css/font-awesome.css">
-    <!--Owl Carousel-->
-    <link href="../bower_components/owl.carousel/dist/assets/owl.carousel.css">
-    <link href="../bower_components/owl.carousel/dist/assets/owl.theme.default.css">
+    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -124,32 +121,32 @@
             </div>
             <div class="font-icons">
                 <div class="col-md-4 single-features">
-                    <i class="fa fa-battery-full"></i>
+                    <i class="fa fa-group"></i>
                     <h2>Big Community</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
                 <div class="col-md-4 single-features">
-                    <i class="fa fa-battery-full"></i>
+                    <i class="fa fa-file-video-o"></i>
                     <h2>Big Community</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
                 <div class="col-md-4 single-features">
-                    <i class="fa fa-battery-full"></i>
+                    <i class="fa fa-lightbulb-o"></i>
                     <h2>Big Community</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
                 <div class="col-md-4 single-features">
-                    <i class="fa fa-battery-full"></i>
+                    <i class="fa fa-diamond"></i>
                     <h2>Big Community</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
                 <div class="col-md-4 single-features">
-                    <i class="fa fa-battery-full"></i>
+                    <i class="fa fa-television"></i>
                     <h2>Big Community</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
                 <div class="col-md-4 single-features">
-                    <i class="fa fa-battery-full"></i>
+                    <i class="fa fa-comments-o"></i>
                     <h2>Big Community</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
@@ -241,6 +238,53 @@
     </div>
 </section>
 <!-- End Bussines plan section-->
+
+<!-- Testimonials section-->
+<section class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="text-center section-title">
+                <h2>Client Testimonial</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elitsed eiusmod tempor enim minim
+                    veniam quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
+            </div>
+
+            <div id="carousel1" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel1" data-slide-to="1"></li>
+                    <li data-target="#carousel1" data-slide-to="2"></li>
+                </ol>
+
+                <div class="carousel-inner">
+                    <div class="item-active">
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="single-testimonial">
+                                <div class="testimonial_img">
+                                    <h3>Santa Islam</h3>
+                                    <h4>Elizabeth INC</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                                <div class="testiomnial_content">
+                                    <h3>MASUM BILLAH</h3>
+                                    <h4>Elizabeth INC</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="single-testimonial">
+                                <div class="testimonial_img">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Testimonials section-->
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
