--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <!--Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--Fonts Awesome-->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -251,20 +251,18 @@
 
             <div id="carousel1" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
+                    <li data-target="#carousel1" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel1" data-slide-to="1"></li>
-                    <li data-target="#carousel1" data-slide-to="2"></li>
                 </ol>
 
                 <div class="carousel-inner">
-                    <div class="item-active">
+                    <div class="item active">
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="single-testimonial">
                                 <div class="testimonial_img">
-                                    <h3>Santa Islam</h3>
-                                    <h4>Elizabeth INC</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <img src="assets/images/testimonials/1.jpg">
                                 </div>
-                                <div class="testiomnial_content">
+                                <div class="testimonial_content">
                                     <h3>MASUM BILLAH</h3>
                                     <h4>Elizabeth INC</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -274,12 +272,51 @@
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="single-testimonial">
                                 <div class="testimonial_img">
-
+                                    <img src="assets/images/testimonials/2.jpg">
+                                </div>
+                                <div class="testimonial_content">
+                                    <h3>Santa Islam</h3>
+                                    <h4>Elizabeth INC</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="single-testimonial">
+                                <div class="testimonial_img">
+                                    <img src="assets/images/testimonials/3.jpg">
+                                </div>
+                                <div class="testimonial_content">
+                                    <h3>KONA JAHAN</h3>
+                                    <h4>Elizabeth INC</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="single-testimonial">
+                                <div class="testimonial_img">
+                                    <img src="assets/images/testimonials/4.jpg">
+                                </div>
+                                <div class="testimonial_content">
+                                    <h3>SYED EKRAM</h3>
+                                    <h4>Elizabeth INC</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <!--<a href="#carousel1" class="left carousel-control" data-slide="prev">-->
+                    <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+                <!--</a>-->
+
+                <!--<a href="#carousel1" class="right carousel-control" data-slide="next">-->
+                    <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+                <!--</a>-->
             </div>
         </div>
     </div>
