--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!--Fonts Awesome-->
     <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!--Owl Carousel-->
+    <link href="../bower_components/owl-carousel/owl-carousel/owl.carousel.css" rel="stylesheet">
+    <link href="../bower_components/owl-carousel/owl-carousel/owl.theme.css" rel="stylesheet">
 </head>
 <body>
 
@@ -309,23 +312,99 @@
                         </div>
                     </div>
                 </div>
-
-                <!--<a href="#carousel1" class="left carousel-control" data-slide="prev">-->
-                    <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
-                <!--</a>-->
-
-                <!--<a href="#carousel1" class="right carousel-control" data-slide="next">-->
-                    <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
-                <!--</a>-->
             </div>
         </div>
     </div>
 </section>
 <!-- End Testimonials section-->
 
+<!-- Company Logo section-->
+<div class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="partner owl-carousel owl-theme">
+                    <div class="owl-wrapper-outer">
+                        <div class="owl-wrapper">
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/1.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/2.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/3.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/4.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/5.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/6.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/1.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/2.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/3.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/4.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/5.png">
+                                </a>
+                            </div>
+                            <div class="owl-item">
+                                <a href="#">
+                                    <img src="assets/images/logo/6.png">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="owl-controls clickable">
+                        <div class="owl-pagination">
+                            <div class="owl-page active"></div>
+                            <div class="owl-page"></div>
+                            <div class="owl-page"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Company Logo section-->
+
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="../bower_components/owl.carousel/dist/owl.carousel.min.js"></script>
+<script src="../bower_components/owl-carousel/owl-carousel/owl.carousel.min.js"></script>
 <script src="javascript/main.js"></script>
 </body>
 </html>
