--- a/app/index.html
+++ b/app/index.html
@@ -319,88 +319,121 @@
 <!-- End Testimonials section-->
 
 <!-- Company Logo section-->
-<div class="section-padding">
+<div class="section-padding partner-logo">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="partner owl-carousel owl-theme">
-                    <div class="owl-wrapper-outer">
-                        <div class="owl-wrapper">
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/1.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/2.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/3.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/4.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/5.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/6.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/1.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/2.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/3.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/4.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/5.png">
-                                </a>
-                            </div>
-                            <div class="owl-item">
-                                <a href="#">
-                                    <img src="assets/images/logo/6.png">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="owl-controls clickable">
-                        <div class="owl-pagination">
-                            <div class="owl-page active"></div>
-                            <div class="owl-page"></div>
-                            <div class="owl-page"></div>
-                        </div>
-                    </div>
+
+                        <div class="item"><img src="assets/images/logo/1.png"></div>
+                        <div class="item"><img src="assets/images/logo/2.png"></div>
+                        <div class="item"><img src="assets/images/logo/3.png"></div>
+                        <div class="item"><img src="assets/images/logo/4.png"></div>
+                        <div class="item"><img src="assets/images/logo/5.png"></div>
+                        <div class="item"><img src="assets/images/logo/6.png"></div>
+                        <div class="item"><img src="assets/images/logo/1.png"></div>
+                        <div class="item"><img src="assets/images/logo/2.png"></div>
+                        <div class="item"><img src="assets/images/logo/3.png"></div>
+                        <div class="item"><img src="assets/images/logo/4.png"></div>
+                        <div class="item"><img src="assets/images/logo/5.png"></div>
+                        <div class="item"><img src="assets/images/logo/6.png"></div>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
 <!-- End Company Logo section-->
+
+<!-- Newsletter section-->
+<section class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="subscribe-input">
+                <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12 text-center wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0" style="visibility: visible; animation-duration: 1s; animation-delay: 0.2s; animation-name: fadeInRight;">
+                    <h3 class="newsletter_title">Subscribe to get the latest news, update and offer information. Don't worry, we won't send spam! You can un-subscribe at any time.</h3>
+                    <div id="mc_embed_signup">
+
+                        <form action="http://site90.us11.list-manage.com/subscribe/post?u=599a2153f4b86cb2f92d4af3a&amp;id=26d7c26287" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
+                            <input type="email" name="EMAIL" class="form-control" id="mce-email" placeholder="Enter Email">
+                            <span class="input-group-btn">
+										<button type="submit" name="subscribe" id="subscribe-btn" class="btn btn-detault btn-light-bg">Subscribe</button>
+									</span>
+                            <div id="mce-responses">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End Newsletter section-->
+
+<!-- Footer section-->
+<footer>
+    <div class="container">
+        <div class="row section-padding">
+            <div class="col-md-3">
+                <h4>Contact</h4>
+                <div class="footer-contact">
+                    <ul>
+                        <li><i class="fa fa-rocket"></i><span>3481 Melrose Place, Beverly Hills, CA 90210</span></li>
+                        <li><i class="fa fa-phone"></i><span>Call Us - (+1) 517 397 7100</span></li>
+                        <li><i class="fa fa-fax"></i><span>Fax - (+12) 123 1234</span></li>
+                        <li><i class="fa fa-envelope"></i><span>info@Elizabeth.com</span></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h4>Elizabeth</h4>
+                <div class="footer-contact">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Faq</a></li>
+                        <li><a href="#">Job</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h4>Social</h4>
+                <div class="footer-contact">
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Behance</a></li>
+                        <li><a href="#">Dribble</a></li>
+                        <li><a href="#">Youtube</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <h4>Support</h4>
+                <div class="footer-contact">
+                    <ul>
+                        <li><a href="#">Help & Support</a></li>
+                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Terms & conditions</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                <div class="copyright">
+                    <p>Copyright © 2016 |    All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- End Footer section-->
+
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
