--- a/app/index.html
+++ b/app/index.html
@@ -102,10 +102,10 @@
                 <a class=" btn-light-bg">Read More</a>
             </div>
             <div class="col-md-7">
-                <div>
-                    <div class="item"><img src="assets/images/1.jpg"></div>
-                    <!--<div class="item"><img src="assets/images/2.jpg"></div>-->
-                    <!--<div class="item"><img src="assets/images/3.jpg"></div>-->
+                <div id="about-carousel" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class
+                    </div>
                 </div>
             </div>
         </div>
