--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,7 @@
 <!-- Background-image section-->
 <section class="main-section">
     <div class="container">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
             <div class="hero-text">
                 <h2>Your choice is our choice</h2>
 
@@ -82,8 +82,8 @@
                     quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
 
                 <div class="main-buttons">
-                    <button class="btn btn-default about-btn">About Us</button>
-                    <button class="btn btn-default start-btn">Get Start</button>
+                    <button class="btn btn-default about-btn wow bounceIn" data-wow-delay=".6s" data-wow-duration="1.6s">About Us</button>
+                    <button class="btn btn-default start-btn wow bounceIn" data-wow-delay=".8s" data-wow-duration="1.6s">Get Start</button>
                 </div>
             </div>
         </div>
@@ -101,7 +101,7 @@
                     quis notru exercit ation Lorem ipsum dolor sit amet.Veniam quis notru exercit.</p>
             </div>
 
-            <div class="col-md-5">
+            <div class="col-md-5 col-xs-12 col-sm-12" >
                 <div class="promotion-title">
                     <h2>Clean - Simple - Modern Beautiful template.</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
@@ -109,10 +109,11 @@
                         took a galley of type and scrambled it to make a type specimen book. It has survived not
                         only five centuries, but also the leap into electronic typesetting, remaining essentially
                         unchanged.</p>
+                    <a class=" btn-light-bg">Read More</a>
                 </div>
-                <a class=" btn-light-bg">Read More</a>
+
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-sm-12 col-xs-12">
                 <div id="about-carousel" class="carousel slide carousel-fade" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
